HFP-2577 Fix close button z-index

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -796,6 +796,7 @@ a {
         right: -0.125em;
         top: 0;
         position: absolute;
+        z-index: 1;
         font-family: $icon-font-family;
         content: "\e894";
         line-height: 1em;
